add web summary for generation and individual

--- a/ecoalgorithm/templates/_layout.html
+++ b/ecoalgorithm/templates/_layout.html
@@ -8,7 +8,7 @@
         <title>Results</title>
     {% endif %}
 
-    <link rel="stylesheet" href="{{ url_for('static', filename="results.css") }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename="common.css") }}">
     {% block head %}{% endblock head %}
 </head>
 <body>
