--- a/ecoalgorithm/templates/test.html
+++ b/ecoalgorithm/templates/test.html
@@ -1,6 +1,6 @@
 {% extends "_layout.html" %}
 {% block head %}
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='c3.css') }}">
 {% endblock head %}
 {% block body %}
     <div id="chart"></div>
