--- a/ecoalgorithm/templates/summary.html
+++ b/ecoalgorithm/templates/summary.html
@@ -4,20 +4,7 @@
 {% endblock head %}
 
 {% block body %}
-    <h1>Overview</h1>
-    <p>summary</p>
+    <h1>Summary</h1>
     <div id="chart"></div>
-    {#    {% if generations %}#}
-    {#        <table>#}
-    {#        {% for gen in generations %}#}
-    {#            <tr>#}
-    {#                <td><a href="">Generation {{ gen[0] }}</a> </td>#}
-    {#                <td>{{ gen[1] }}</td>#}
-    {#                <td>{{ gen[2] }}</td>#}
-    {#            </tr>#}
-    {#        {% endfor %}#}
-    {#        </table>#}
-    {#    {% endif %}#}
     <script src="{{ url_for('static', filename='summary.js') }}"></script>
-
 {% endblock body %}
