--- a/ecoalgorithm/templates/summary.html
+++ b/ecoalgorithm/templates/summary.html
@@ -6,5 +6,8 @@
 {% block body %}
     <h1>Summary</h1>
     <div id="chart"></div>
+    <div style="display: none">
+        <h4 class="no-info">No Generations have been created</h4>
+    </div>
     <script src="{{ url_for('static', filename='summary.js') }}"></script>
 {% endblock body %}
