--- a/ecoalgorithm/static/generation.less
+++ b/ecoalgorithm/static/generation.less
@@ -1,1 +1,14 @@
 
+#generation-header{
+  a, span {
+    margin: 0 2px;
+    padding: 0 5px;
+    text-decoration: none;
+    color: blue;
+  }
+
+  span {
+    color: rgba(0,0,0,0);
+    cursor: default;
+  }
+}
