--- a/ecoalgorithm/static/common.css
+++ b/ecoalgorithm/static/common.css
@@ -1,7 +1,3 @@
-html,
-body {
-  width: 100%;
-}
 body {
   background-color: lightgrey;
   margin: 10px 5%;
@@ -13,13 +9,22 @@ body > div {
 .ind-info,
 .children,
 .members {
+  margin-top: 10px;
   display: flex;
+  flex-wrap: wrap;
+}
+.parents ul,
+.ind-info ul,
+.children ul,
+.members ul {
+  margin: 0;
 }
 .parents > div,
 .ind-info > div,
 .children > div,
 .members > div {
   flex: 1;
+  min-width: 325px;
 }
 .no-info {
   color: red;
